correct spacing, remove console logs

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,3 +136,7 @@ select{
   height: 100px;
   width: 100px;
 }
+
+#fight-button {
+  display: none;
+}
